# arafs

./: .gitmodules  README.md  readne.txt
doc/: Release_Notes.hafs.v2.1.0.md
ecf/: forecast.man  init.man  jhafs_msg_check.ecf  launch.man  post.man
ecf/analysis/: jhafs_analysis.ecf  jhafs_analysis_merge.ecf
ecf/forecast/: jhafs_hfsa_forecast_atm.ecf  jhafs_hfsa_forecast_atm_ocn.ecf  jhafs_hfsa_forecast_atm_ocn_wav.ecf  jhafs_hfsb_forecast_atm.ecf  jhafs_hfsb_forecast_atm_ocn.ecf
ecf/init/: jhafs_atm_ic.ecf  jhafs_atm_ic_fgat06.ecf  (+7 more)
jobs/: JHAFS_ANALYSIS  JHAFS_ATM_IC  JHAFS_ATM_INIT  JHAFS_ATM_LBC  JHAFS_ATM_POST  JHAFS_ATM_PREP  JHAFS_ATM_VI  JHAFS_CLEANUP  JHAFS_ENKF  JHAFS_ENKF_HX  JHAFS_FORECAST  JHAFS_GEMPAK  JHAFS_GRAPHICS  JHAFS_LAUNCH  JHAFS_MERGE  JHAFS_MSG_CHECK  JHAFS_OBS_PREP  JHAFS_OCN_POST  JHAFS_OCN_PREP  JHAFS_OUTPUT  JHAFS_PRODUCT  JHAFS_UNPOST  JHAFS_WAV_POST  JHAFS_WAV_PREP
modulefiles/: hafs.gaeac6.lua  hafs.hera.lua  hafs.hercules.lua  hafs.jet.lua  hafs.orion.lua  hafs.ursa.lua  hafs.wcoss2.lua  hafs_mom6_obc.hera.lua  hafs_mom6_obc.ursa.lua
parm/: hafs.conf  hafs_basic.conf  hafs_holdvars.conf  hafs_holdvars.txt  hafsv2p1a_phase3.conf  hafsv2p1b_phase3.conf  hafsv2p1p1a_baseline.conf  hafsv2p1p1a_ensda.conf  hafsv2p1p1a_final.conf  hafsv2p1p1a_gfdlmpv3.conf  hafsv2p1p1a_jtwc.conf  hafsv2p1p1a_mixensda.conf  hafsv2p1p1a_noahmp.conf  hfsa_CP.conf  hfsa_EP.conf  hfsa_ar2.conf  hfsa_other_basins.conf  hfsb.conf  hfsb_dev.conf  system.conf.gaeac6  system.conf.hera  system.conf.hercules  system.conf.jet  system.conf.kjet  system.conf.orion  system.conf.ursa  system.conf.wcoss2
rocoto/: cronjob_hafs.sh  cronjob_hafs_rt.sh  cronjob_hafsv2p1a_phase3.sh  cronjob_hafsv2p1b_phase3.sh  cronjob_hafsv2p1p1a_2025rt.sh  cronjob_hafsv2p1p1a_baseline.sh  cronjob_hafsv2p1p1a_ensda.sh  cronjob_hafsv2p1p1a_final.sh  cronjob_hafsv2p1p1a_gfdlmpv3.sh  cronjob_hafsv2p1p1a_mixensda.sh  cronjob_hafsv2p1p1a_noahmp.sh  cronjob_hfsa.sh  cronjob_hfsa_ar2.sh  cronjob_hfsb.sh  env_vars.ent  hafs_workflow.xml.in  run_hafs.py
scripts/: exhafs_analysis.sh  exhafs_archive.py  exhafs_atm_ic.sh  exhafs_atm_init.sh  exhafs_atm_lbc.sh  exhafs_atm_post.sh  exhafs_atm_prep.sh  exhafs_atm_vi.sh  exhafs_datm_prep.sh  exhafs_docn_prep.sh  exhafs_emcgraphics.sh  exhafs_enkf.sh  exhafs_enkf_hx.sh  exhafs_forecast.sh  exhafs_gempak.sh  exhafs_hrdgraphics.sh  exhafs_launch.py  exhafs_merge.sh  exhafs_msg_check.py  exhafs_obs_prep.sh  exhafs_ocn_post.py  exhafs_ocn_post.sh  exhafs_ocn_prep.py  exhafs_ocn_prep.sh  exhafs_output.sh  exhafs_product.sh  exhafs_unpost.sh  exhafs_wav_post.py  exhafs_wav_prep.py
sorc/: build_all.sh  build_forecast.sh  build_ww3_utils.sh  cleanup_nco.list  cleanup_nco.sh  install_all.sh  install_hafs.sh  link_fix.sh  sparse_checkout_nco.sh
sorc/hafs_tools.fd/sorc/hafs_calc_analysis/: CMakeLists.txt  inc2anl.f90
sorc/hafs_tools.fd/sorc/hafs_tdr_superob/: CMakeLists.txt  module_tdr_bufr.f90  module_tdr_common.f90  module_tdr_superob.f90  tdr_so_main.f90
ush/: hafs_calc_enkfgdas_analysis.py  hafs_completion.py  hafs_donefile.py  hafs_format_sonde.py  hafs_gempak_meta_grid.sh  hafs_gempak_meta_nest.sh  hafs_grib2_unique.pl  hafs_hycom_limits.py  hafs_lnchk.sh  hafs_mom6_gfs_forcings.py  hafs_mom6_obc_from_rtofs.py  hafs_pre_job.sh.inc  hafs_runcmd.sh.inc  hafs_scrub.py  rocoto_pre_job.sh  rsync-no-vanished.sh  stagger_uv_from_ts_points.py  tcutil_generate_vitals.py  tcutil_interpolate.py  tcutil_multistorm_sort.py
versions/: build.ver  run.ver
(+181 files in other folders)
